<resources>
<string name="app_name">Desire Statement</string>
<string name="menu_item_overview">Overview</string>
<string name="menu_item_myds">My DS\'s</string>
<string name="menu_item_write_new">Write New DS</string>
<string name="menu_item_about">About HOA</string>
<string name="menu_item_online_content">Online Content</string>
<string name="step_one_text1">This is the first step to the process of writing a Desire Statement. From this page forward you will be taken through the steps of writing a powerful statement. By the end of this step-by-step process you\'ll have a completed DS that you can start connecting with and using to attract your desire.</string>
<string name="step_one_title">Step One: Choose a Desire</string>
<string name="step_one_text2">Please answer the question below and continue with a desire you are already clear on.</string>
<string name="step_one_text3">What\'s the desire you wish to manifest?</string>
<string name="your_desire">Your Desire: </string>
<string name="step_two_title">Step Two: Get Specific</string>
<string name="step_two_text1">Use the form below to brainstorm the specifics of this desire. Is your desire a general statement  of what you really want to experience?  What\'s the specific amount of money you want to attract? What is the specific relationship? What about your health... how much weight do you want to lose? How about your business... what does that desire look like exactly?   Remember the more specific you are, the more connected you\'ll be be the energy of that exact desire.</string>
<string name="step_two_text2">After you have brainstormed the &quot;specificness&quot; of this desire, re-write the specific desire below:</string>
<string name="your_specific_desire">Your Specific Desire:</string>
<string name="step_three_title">Step Three: Setting a Time Frame</string>
<string name="step_three_text1">Do you want to set a time frame to manifesting this desire?  If so, when?</string>
<string name="step_three_text2">How does it feel to set a time frame? Do you &quot;feel&quot; challenged by or doubtful of setting this time frame? Pause, feel, and journal your feelings below about this time frame:</string>
<string name="step_three_text3">After looking at your feelings, do you still want to set a time frame?</string>
<string name="step_three_text4">If yes, write out a short sentence stating the time frame for this desire to be manifested. </string>
<string name="step_three_text5">If no, click continue below without typing anything below.</string>
<string name="step_three_text6">Example: My desire will be manifested by June 1st, 2009</string>
<string name="step_four_title">Step Four: As if it is so...</string>
<string name="step_four_text1">A desire manifests faster when you notice it as already so and instead of creating it, you\'re just allowing yourself to receive it. There are ways you can state this fundamental truth. </string>
<string name="step_four_text2">Here are some examples:</string>
<string name="step_four_text3">I am grateful that.... I am excited that.... I\'m grateful for this.... I am enjoying....</string>
<string name="step_four_text4">Use the field below to write out a statement that feels good to you that acknowledges it as already so:</string>
<string name="step_five_title">Step Five: Write the 1st Part of your Desire Statement</string>
<string name="step_five_text1">Now it is time to write the first part of your desire statement using the information you have come up with above. This first part is one sentence long and combines the already so statement with the specific desire and a date if you have chosen to include a date. </string>
<string name="step_five_text2">Here are some examples:</string>
<string name="step_five_text3">I am grateful that my busines, by June 1st 2009, has generated a $10,000 increase in sales from our xyz widget product.</string>
<string name="step_five_text4">I am energized by the healthy loss of 25 pounds from my body through a consistent vegetarian diet and 4 days a week exercise. </string>
<string name="step_five_text5">I am feeling abundant that by March 15th, 2009 I\'ve manifested a $1000 increase in my monthly income, which continues to come in each month there on after.</string>
<string name="step_five_text6">Write out your first DS sentence below: </string>
<string name="step_six_title">Step Six: Your Feelings About This Desire</string>
<string name="step_six_text1">The next part of your desire statement focuses in on your feelings. Look at your desire above and close your eyes and connect this desire. See, feel or describe out loud what that desire is like as if it was already so in your life. You have already manifested.  It is now your experience. </string>
<string name="step_six_text2">What does that feel like? Describe those feelings below:</string>
<string name="step_seven_title">Step Seven: Your Feeling Words</string>
<string name="step_seven_text1">Look over the feelings you wrote above and pick from them feelings that stand out the most for you. What are the words that describe these feelings?</string>
<string name="step_seven_text2">Do you feel Excited? Confident? Grateful?  Happy? Energized? Powerful? Loving?  Peaceful?</string>
<string name="step_seven_text3">Pick several of the strongest feelings and write them below.</string>
<string name="step_eight_title">Step Eight: Your Feeling Statement - Part 2</string>
<string name="step_eight_text1">Use the feeling\'s words above and write out the 2nd part of the statement. Form a sentence that describes these feelings and their connection to your desire.</string>
<string name="step_eight_text2">For Example:</string>
<string name="step_eight_text3">I feel confident, energized, and powerful that my abundance has increased each month giving me more security and options to pursue my biggest desires.</string>
<string name="step_eight_text4">I am feeling loving, connected, giving, and in bliss because I have met my soulmate and we are now enjoying our lives together.</string>
<string name="step_eight_text5">I feel lighter, stronger, more energized, and ready to take on the world because my body is healthy and light, providing me the strength to pursue my dreams.</string>
<string name="step_eight_text6">Write your feelings statement here:</string>
<string name="step_nine_title">Step Nine: The Purpose of This Desire</string>
<string name="step_nine_text1">Every desire has a purpose.  The experience of any desire will impact your life, the lives of others around you, and often to those people who will benefit from this desire. This is the purpose. These are the reason why we have desires. Answer the questions below to clarify your purpose for this desire.</string>
<string name="step_twelve_title">Step Twelve: Confirming Your Statement</string>
<string name="step_twelve_text1">To confirm this as your overall desire statement, answer the following questions:</string>
<string name="step_twelve_text2">Read your statement above. How does it make you feel?</string>
<string name="step_twelve_text3">Does it activate an energy within you?</string>
<string name="step_twelve_text4">Do you feel any "doubt" or challenges when you read the statement? If yes, these are your feelings speaking to you and may mean you need to adjust of your statement. Write out any details below so you can adjust this statement on the page that allows you to edit it.</string>
<string name="step_twelve_text5">Last Step - Give this desire a short name to reference it in your desire statement list.</string>
<string name="step_twelve_text6">If you feel complete and "feel" strongly connected to this statement, click the Finish button below.</string>
<string name="step_twelve_text7">If you want to adjust your Desire Statement, click this button:</string>
<string name="desire_time_frame">Desire Time Frame:</string>
<string name="feeling_words">Feeling\'s words:</string>
<string name="your_desire_statement">Your Desire Statement</string>
<string name="overview_text1">This website is an extension of a manifesting process called Habit of Attraction. The Desire Statement is one of the most important parts of this process.  There are three foundational principles of the HOA process that everything revolves around. These principles are:</string>
<string name="overview_text2">1) It\'s all in the Energy</string>
<string name="overview_text3">2) Keep it Simple, keep it Consistent</string>
<string name="overview_text4">3) You must know your Specific Destination</string>
<string name="overview_text5">The Desire Statement is the written expression of the third principle. It\'s the third principle in action and is what all elements of this process move towards. Most people who "want" to manifest an experience or thing in their life are not usually clear on the specifics of what that is, or they don\'t "spell it out," which causes them to not connect with it.</string>
<string name="overview_text6">The Desire Statement is the connection to the specific energy of your desire. Once you connect with this energy it will expand through the conscious energy flow of your thoughts, words, feelings, and actions. When it expands and it meets the "energy vibration" of the actual desire, that\'s when you\'ll manifest.</string>
<string name="overview_text7">This website helps walk you through writing an effective desire statement. Through a questions journaling process you will write the three parts of the statement. Once you have written the statement, and find yourself feeling connected to it, you\'ll have started that very important energy connection. The energy will then build through a consistent energy flow. When that building energy matches the desires energy, the desire will then become your experience.</string>
<string name="overview_text8">The three parts of a Desire Statement are:</string>
<string name="overview_text9">1. A clear and specific statement of the desire you have, written as if it is already so.</string>
<string name="overview_text10">2. The feelings you have knowing this desire is already so.</string>
<string name="overview_text11">3. The purpose of the desire in your life, the lives of the people around you, and the people who may be connected to it.</string>
<string name="overview_text12">This site helps you write these three parts and then connect them together in one very powerful statement. This statement is a definition of your destination  AND the energetic starting point that your thoughts, words, feelings, and actions will feed until it of matches to the actual desire. All things will revolve around this statement and it will be your greatest tool to manifesting your biggest desires.</string>
<string name="overview_text13">Start the writing of your first Desire Statement by clicking the "Write New" link in the menu above. If you have feedback or comments about this site, please click the About Us link and submit your comments using the form provided. </string>
<string name="overview_text14">Enjoy the site and the Habit of Attraction process.</string>
<string name="about_text1">Go on an extraordinary journey and discover your true manifesting powers...</string>
<string name="about_text2">The Habit of Attraction  is the practice of combining habit creation (a consistent set of actions towards a goal or desire) and the Law of Attraction (giving your attention, energy, and focus to your desire) to manifest anything you want. When you create a "habit plan" and allow the principles of the Law of Attraction to guide your way, it makes it nearly impossible to not get exactly what you want</string>
<string name="about_text3">This website is an extension of the HOA teaching process, guiding you in writing one of the most parts of the HOA manifesting process.</string>
<string name="about_text4">To learn more about HOA visit: </string>
<string name="about_text5">www.HabitofAttraction.com</string>
</resources>