<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:background="@color/background">
 <ImageView android:id="@+id/imageView1" android:layout_height="wrap_content" android:layout_width="fill_parent" android:background="@drawable/write_ds"></ImageView>
 <ScrollView android:id="@+id/ScrollView01" android:layout_height="fill_parent" 
  android:layout_width="fill_parent" android:isScrollContainer="true" 
  android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbars="vertical">
  <LinearLayout android:id="@+id/LinearLayout01" android:layout_height="fill_parent" 
   android:layout_width="fill_parent" android:orientation="vertical">
   <TextView android:id="@+id/TextView03" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/your_desire_statement" android:background="@color/menu_color" android:textStyle="bold" android:textColor="@android:color/black" android:textSize="@dimen/step_textbox_size" android:padding="10dp"></TextView>
   <TextView android:layout_height="wrap_content" android:gravity="center_horizontal" android:layout_width="fill_parent" android:text="test" android:textColor="@color/step_answer_color" android:background="@color/menu_color" android:id="@+id/TextView_Box16_17" android:paddingBottom="30dp" android:paddingTop="30dp" android:textSize="@dimen/step_textbox_size"></TextView>

   <TextView android:id="@+id/TextView05" android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center_horizontal" android:padding="10dp" android:text="@string/step_twelve_title" android:textColor="@android:color/black" android:textSize="@dimen/step_textbox_size" android:textStyle="bold"></TextView>
   <TextView android:id="@+id/TextView07" android:layout_height="wrap_content" android:layout_width="fill_parent" android:textSize="@dimen/step_textbox_size" android:text="@string/step_twelve_text1" android:textColor="@android:color/black" android:padding="10dp"></TextView>

   <TextView android:id="@+id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/step_textbox_size" android:text="@string/step_twelve_text2" android:textColor="@android:color/black" android:padding="10dp"></TextView>
   <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:lines="3" android:paddingTop="5dp" android:id="@+id/Box18" android:isScrollContainer="false" android:scrollbars="vertical"></EditText>

   <TextView android:id="@+id/TextView06" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/step_textbox_size" android:text="@string/step_twelve_text3" android:textColor="@android:color/black" android:padding="10dp"></TextView>
   <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:lines="3" android:id="@+id/Box19" android:scrollbars="vertical" android:isScrollContainer="false"></EditText>
 
   <TextView android:id="@+id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/step_textbox_size" android:text="@string/step_twelve_text4" android:textColor="@android:color/black" android:padding="10dp"></TextView>
   <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:lines="3" android:paddingTop="5dp" android:id="@+id/Box20" android:scrollbars="vertical" android:isScrollContainer="false"></EditText>

   <TextView android:id="@+id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/step_textbox_size" android:text="@string/step_twelve_text5" android:textColor="@android:color/black" android:padding="10dp"></TextView>
   <EditText android:layout_height="wrap_content" android:lines="1" android:layout_width="fill_parent" android:padding="10dp" android:id="@+id/Box22" android:scrollbars="vertical" android:isScrollContainer="false"></EditText>

   <TextView android:id="@+id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/step_textbox_size" android:text="@string/step_twelve_text6" android:textColor="@android:color/black" android:padding="10dp"></TextView>
   <Button android:layout_height="wrap_content" android:id="@+id/Button_2" android:layout_width="wrap_content" android:background="@drawable/finishbtn"></Button>

   <TextView android:id="@+id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/step_textbox_size" android:text="@string/step_twelve_text7" android:textColor="@android:color/black" android:padding="10dp"></TextView>
   <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/Button_3" android:background="@drawable/adjustbtn"></Button>
  </LinearLayout>
 </ScrollView>

</LinearLayout>
